load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "boost.outcome",
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.h",
    ]),
    includes = ["include"],
    deps = [
        "@boost.config",
        "@boost.exception",
        "@boost.system",
        "@boost.throw_exception",
    ],
)
